--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,18 +2,18 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Simeon Nedelchev
     - name: Date of Birth
-      value: 14th March 1879
+      value: 17th June 1991
     - name: Languages
-      value: English, German
+      value: English, Russian 
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
       institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      year: present
       description:
         - Description 1.
         - Description 2.
@@ -21,8 +21,8 @@
           contents:
             - Sub-description 1.
             - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
+    - title: Master
+      institution: Korean University of Science and Education
       year: 1900
       description:
         - Description 1.
