--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -21,6 +21,7 @@
           contents:
             - Sub-description 1.
             - Sub-description 2.
+            
     - title: Master
       institution: Korean University of Science and Education
       year: 1900
@@ -91,7 +92,7 @@
         - Description 1.
         - Description 2.
 
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+# - title: Other Interests
+#   type: list
+#   contents:
+#     - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
