--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -2,5 +2,14 @@
   url: https://aapt.scitation.org/journal/ajp
   color: "#00369f"
 
+"RAL":
+  url : https://ieeexplore.ieee.org/xpl/aboutJournal.jsp?punumber=7083369
+
+"IROS":
+  url : https://www.ieee-ras.org/conferences-workshops/financially-co-sponsored/iros
+
+"ICRA"
+  url : https://www.ieee-ras.org/conferences-workshops/fully-sponsored/icra
+
 "PhysRev":
   url: https://journals.aps.org/
