--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -10,7 +10,7 @@
   url: https://www.ieee-ras.org/conferences-workshops/financially-co-sponsored/iros
   color: "#00369f"
 
-"ICRA"
+"ICRA":
   url: https://www.ieee-ras.org/conferences-workshops/fully-sponsored/icra
   color: "#00369f"
 
