--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,5 +1,5 @@
 "Ryu":
-  - firstname: ["Jee-Hwan", "JH", "J.H.", "Jee-Hwan Ryu", , "Jee-Hwan Ryu"]
+  - firstname: ["Jee-Hwan", "JH", "J.H.", "Jee-Hwan Ryu", "Jee-Hwan Ryu"]
     url: https://scholar.google.com/citations?user=zLOoWCUAAAAJ&hl=en&oi=ao
 
 "Gaponov":
