--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -1,6 +1,4 @@
-"AJP":
-  url: https://aapt.scitation.org/journal/ajp
-  color: "#00369f"
+
 
 "RAL":
   url: https://ieeexplore.ieee.org/xpl/aboutJournal.jsp?punumber=7083369
@@ -8,11 +6,8 @@
 
 "IROS":
   url: https://www.ieee-ras.org/conferences-workshops/financially-co-sponsored/iros
-  color: "#00369f"
+  color: "#B71C1C"
 
 "ICRA":
   url: https://www.ieee-ras.org/conferences-workshops/fully-sponsored/icra
-  color: "#00369f"
-
-"PhysRev":
-  url: https://journals.aps.org/
+  color: "#B71C1C"
