--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -11,23 +11,38 @@
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
+    - title: PhD in Computer Science (Robotics track).
+      institution: Innopolis University, Russia
       year: present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-            
-    - title: Master
-      institution: Korean University of Science and Education
-      year: 1900
+        - thesis on the optimization based discrete nonlinear control of mechanical systems in implicit form 
+        # - Description 2.
+        # - title: Description 3.
+        #   contents:
+        #     - Sub-description 1.
+        #     - Sub-description 2.
+    - title: Master in Mechanical Engineering
+      institution: Korean University of Science and Education, South Korea
+      year: 2019
       description:
-        - Description 1.
-        - Description 2.
+        - GPA 4.9/5 (98/100)
+        - thesis on design of robotic gripper with constant transmission ratio based on twisted string actuator
+
+    - title: Master in Robotics
+      institution: Moscow State Technological University STANKIN, Russia
+      year: 2018
+      description:
+        - GPA 4.45/4.5 (98/100)
+        - thesis on the dynamics and control of industrial Robots, from system identification to adaptive control
+
+    - title: Bachelor in Robotics
+      institution: Moscow State Technological University STANKIN, Russia
+      year: 2018
+      description:
+        - GPA 4.9/5 (98/100)
+        - Development and research of dynamical models of industrial robot manipulator
+
+
 
 - title: Experience
   type: time_table
