--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -11,11 +11,11 @@
 - title: Education
   type: time_table
   contents:
-    - title: PhD in Computer Science (Robotics track).
+    - title: PhD in Computer Science (Robotics track)
       institution: Innopolis University, Russia
       year: present
       description:
-        - thesis on the optimization based discrete nonlinear control of mechanical systems in implicit form 
+        - Thesis on the optimization based discrete nonlinear control of mechanical systems in implicit form 
         # - Description 2.
         # - title: Description 3.
         #   contents:
@@ -26,83 +26,85 @@
       year: 2019
       description:
         - GPA 4.9/5 (98/100)
-        - thesis on design of robotic gripper with constant transmission ratio based on twisted string actuator
+        - Thesis on design of robotic gripper with constant transmission ratio based on twisted string actuator
 
     - title: Master in Robotics
       institution: Moscow State Technological University STANKIN, Russia
       year: 2018
       description:
         - GPA 4.45/4.5 (98/100)
-        - thesis on the dynamics and control of industrial Robots, from system identification to adaptive control
+        - Thesis on the dynamics and control of industrial Robots, from system identification to adaptive control
 
     - title: Bachelor in Robotics
       institution: Moscow State Technological University STANKIN, Russia
       year: 2018
       description:
         - GPA 4.9/5 (98/100)
-        - Development and research of dynamical models of industrial robot manipulator
+        -  Thesis on development and research over dynamical models of industrial manipulators
 
 
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
+    - title: Lecturer 
+      institution: Institute for Robotics and Computer Vision, Innopolis University
+      year: 2022 - present
+      # description:
+      #   - Description 1.
+      #   - Description 2.
+      #   - title: Description 3.
+      #     contents:
+      #       - Sub-description 1.
+      #       - Sub-description 2.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
+    # - title: Visiting Professor
+    #   institution: California Institute of Technology, Pasadena, California, US
+    #   year: 1933
+    #   description:
+    #     - Description 1.
+    #     - Description 2.
+    - title: Teaching Assistant
+      institution: Institute for Robotics and Computer Vision, Innopolis University
+      year: 2019 - 2022
 
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
+    - title: Researcher
+      institution: Center for Technologies in Robotics and Mechatronics Components, Innopolis, Russia
+      year: 2019-Present
 
     - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+      institution: BioRobotics laboratory of Korea University of Technology and Education, South Korea
+      year: 2017 - 2019
 
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+# - title: Open Source Projects
+#   type: time_table
+#   contents:
+#     - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
+#       year: 2015-now
+#       description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2019
       items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
+        - “Best master thesis award”, Korea University of Technology and Education
+    - year: 2018
       items: 
-        - Max Planck Medal
+        - First prize in Russian thesis competition “Be-First” 2018 in Computer and Information Technologies.
 
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Nonlinear Control
       items: 
         - Description 1.
         - Description 2.
-    - title: Topic 2.
+    - title: Dynamical Systems
+      items:
+        - Description 1.
+        - Description 2.
+    - title: Applied Optimization
       items:
         - Description 1.
         - Description 2.
