--- a/_config.yml
+++ b/_config.yml
@@ -91,6 +91,7 @@ pinterest_id: # your pinterest id
 unsplash_id: # your unsplash id
 instagram_id: # your instagram id
 facebook_id: # your facebook id
+telegram_id: simkasimka # your facebook id
 discord_id: # your discord id (18-digit unique numerical identifier)
 
 contact_note: >
