--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -15,8 +15,7 @@
       institution: Innopolis University, Russia
       year: 2023
       description:
-        - Dynamic parameter estimation and adaptive control over robotic
-systems: generalized momentum approach
+        - Dynamic parameter estimation and adaptive control over robotic systems, generalized momentum approach
         # - Description 2.
         # - title: Description 3.
         #   contents:
